--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -101,7 +101,7 @@
 			\rule{.8\textwidth}{.2pt}\\[10ex]
 			von\\[2ex]
 			\begin{tabular}{ll}
-			Laura Anger &(Matrikelnr. XXXXXXXX)\\ 
+			Laura Anger &(Matrikelnr. 11086356)\\ 
 			Timo \dots &(Matrikelnr. XXXXXXXX)\\ 
 			Lukas Kolhagen &(Matrikelnr. 11084355)\\
 			\end{tabular}\\[10ex]
