--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -52,7 +52,7 @@
 	% Hyperref
 	\usepackage[
 	pdfauthor={Laura Anger, Timo \dots, Lukas Kolhagen},
-	pdftitle={ABV Bewegungsanalyse},
+	pdftitle={BVA Bewegungsanalyse},
 	pdftoolbar=true,	
 	colorlinks=true,
 	linkcolor=blue,
@@ -68,7 +68,7 @@
 	
 	\pagestyle{fancy}
 	\fancyhf{}
-	\fancyhead[LO]{ABV}
+	\fancyhead[LO]{BVA}
 	\fancyhead[CO]{Bewegungsanalyse in einer Videosequenz}
 	\fancyhead[RO]{\thepage}
 	\renewcommand{\headrulewidth}{0.5pt}
@@ -118,9 +118,21 @@
 	\tableofcontents
 	\newpage
 	\section{Einleitung}
-	Im Paper \cite{aach1998bayesian} \dots
+	Diese Ausarbeitung ist Teil der Abschlussprojekt-Dokumentation im Modul "`Weiterführende Themen der Bildverarbeitung"' im Master Medientechnologie an der Technischen Hochschule Köln.
+	
+	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo \dots und Lukas Kolhagen.
+		\subsection{Ansatz im Paper von Aach und Kunz}
+	
 	\section{Implementierung}
-	\section{Auswertung}	
+		\subsection{Framework für die Darstellung}
+		\subsection{Bewegungsschätzung}
+			\subsubsection{Bildrauschen}
+			\subsubsection{Örtliche Kohärenz}
+			\subsubsection{Zeitliche Kohärenz}
+			\subsubsection{Zu minimierende Kostenfunktion}
+	\section{Auswertung}
+		\subsection{Testvideos}
+		\subsection{Ergebnisse}
 	\section{Zusammenfassung}
 	\newpage
 	\bibliographystyle{plain}
