--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -102,7 +102,7 @@
 			von\\[2ex]
 			\begin{tabular}{ll}
 			Laura Anger &(Matrikelnr. 11086356)\\ 
-			Timo \dots &(Matrikelnr. XXXXXXXX)\\ 
+			Timo Breuer &(Matrikelnr. XXXXXXXX)\\ 
 			Lukas Kolhagen &(Matrikelnr. 11084355)\\
 			\end{tabular}\\[10ex]
 			Durchgeführt im\\ \textbf{Master Medientechnologie}\\ im\\ 
@@ -120,7 +120,7 @@
 	\section{Einleitung}
 	Diese Ausarbeitung ist Teil der Abschlussprojekt-Dokumentation im Modul "`Weiterführende Themen der Bildverarbeitung"' im Master Medientechnologie an der Technischen Hochschule Köln.
 	
-	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo \dots und Lukas Kolhagen.
+	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo Breuer und Lukas Kolhagen.
 		\subsection{Ansatz im Paper von Aach und Kunz}
 	
 	\section{Implementierung}
