--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -120,20 +120,24 @@
 	\section{Einleitung}
 	Diese Ausarbeitung ist Teil der Abschlussprojekt-Dokumentation im Modul "`Weiterführende Themen der Bildverarbeitung"' im Master Medientechnologie an der Technischen Hochschule Köln.
 	
-	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo Breuer und Lukas Kolhagen.
-		\subsection{Ansatz im Paper von Aach und Kunz}
-	
+	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo Breuer und Lukas Kolhagen.		
+	\subsection{Ansatz im Paper von Aach und Kunz}
 	\section{Implementierung}
-		\subsection{Framework für die Darstellung}
+		\subsection{Programmablauf}		
 		\subsection{Bewegungsschätzung}
 			\subsubsection{Bildrauschen}
 			\subsubsection{Örtliche Kohärenz}
 			\subsubsection{Zeitliche Kohärenz}
-			\subsubsection{Zu minimierende Kostenfunktion}
+			\subsubsection{Kostenfunktion}
+		\subsection{Framework für die Darstellung}
 	\section{Auswertung}
-		\subsection{Testvideos}
-		\subsection{Ergebnisse}
+		\subsection{Testmaterial}
+		\subsection{Kostenfunktion}
+		\subsection{Einschwingen der Bewegungsvektorfelder}
+		\subsection{Einschwingverhalten innerhalb eines Bildes}
+		\subsection{Parameter der Regularisierungsterme}
 	\section{Zusammenfassung}
+	\section{Arbeitsaufteilung der Dokumentation}
 	\newpage
 	\bibliographystyle{plain}
 	\bibliography{ABV_Bewegungsanalyse_LaTeX}
