Aktualisierte (moeglicherweise finale) Gliederung.

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -10,6 +10,7 @@
 	\usepackage{pst-plot}
 	\usepackage{float}
 	\usepackage{pdfpages}
+	\usepackage{todonotes}
 	\title{}
 	\date{}
 	\author{}
@@ -117,26 +118,27 @@
 	\newpage
 	\tableofcontents
 	\newpage
-	\section{Einleitung}
+	\section{Einleitung}\todo[inline]{Lukas}
 	Diese Ausarbeitung ist Teil der Abschlussprojekt-Dokumentation im Modul "`Weiterführende Themen der Bildverarbeitung"' im Master Medientechnologie an der Technischen Hochschule Köln.
 	
 	Das Projekt beschäftigte sich mit der Bewegungsanalyse einer Videosequenz mit dem Ansatz des Papers von Aach und Kunz\textsuperscript{\cite{aach1998bayesian}}. Es wurde bearbeitet von Laura Anger, Timo Breuer und Lukas Kolhagen.		
 	\subsection{Ansatz im Paper von Aach und Kunz}
-	\section{Implementierung}
-		\subsection{Programmablauf}		
-		\subsection{Bewegungsschätzung}
-			\subsubsection{Bildrauschen}
-			\subsubsection{Örtliche Kohärenz}
-			\subsubsection{Zeitliche Kohärenz}
-			\subsubsection{Kostenfunktion}
-		\subsection{Framework für die Darstellung}
-	\section{Auswertung}
-		\subsection{Testmaterial}
-		\subsection{Kostenfunktion}
-		\subsection{Einschwingen der Bewegungsvektorfelder}
-		\subsection{Einschwingverhalten innerhalb eines Bildes}
+	\section{Verfahren}
+		\subsection{Bewegungsschätzung}\todo[inline]{Laura}
+		\subsection{Programmablauf}\todo[inline]{Lukas}
+		\subsection{Kostenfunktion}\todo[inline]{Alle}
+			\subsubsection{Datenterm}\todo[inline]{Lukas}
+			\subsubsection{Örtliche Kohärenz}\todo[inline]{Timo}
+			\subsubsection{Zeitliche Kohärenz}\todo[inline]{Lukas}
+		\subsection{Visualisierung}\todo[inline]{Laura}
+	\section{Auswertung}\todo[inline]{Laura \& Timo}
+		\subsection{Testmaterial}\todo[inline]{Laura}
+		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
+		\subsection{Einschwingverhalten}
+			\subsubsection{Bewegungsvektorfelder}
+			\subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
 		\subsection{Parameter der Regularisierungsterme}
-	\section{Zusammenfassung}
+	\section{Zusammenfassung}\todo[inline]{Lukas}
 	\section{Arbeitsaufteilung der Dokumentation}
 	\newpage
 	\bibliographystyle{plain}
