Aktualisierte (moeglicherweise finale) Gliederung.

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -135,9 +135,9 @@
 		\subsection{Testmaterial}\todo[inline]{Laura}
 		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
 		\subsection{Einschwingverhalten}
-			\subsubsection{Bewegungsvektorfelder}
+			\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
 			\subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
-		\subsection{Parameter der Regularisierungsterme}
+		\subsection{Parameter der Regularisierungsterme}\todo[inline]{Timo}
 	\section{Zusammenfassung}\todo[inline]{Lukas}
 	\section{Arbeitsaufteilung der Dokumentation}
 	\newpage
