Einleitung begonnen, Section 1.2 'Projektziel' hinzugefügt.

--- a/ABV_Bewegungsanalyse_LaTeX.bib
+++ b/ABV_Bewegungsanalyse_LaTeX.bib
@@ -1,6 +1,6 @@
 @article{aach1998bayesian,
   title={Bayesian motion estimation for temporally recursive noise reduction in x-ray fluoroscopy},
-  author={Aach, T and Kunz, D},
+  author={Aach, T. and Kunz, D.},
   journal={Philips Journal of Research},
   volume={51},
   number={2},
