--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -18,6 +18,12 @@
 	\usepackage{amsmath}
 	\usepackage{fancyhdr}
 	\usepackage{enumitem} 
+	\parindent0pt
+	\usepackage[format=plain,
+      justification=RaggedRight,
+      singlelinecheck=false]
+     {caption}
+
 	
 	% Listings
 	\usepackage{listings}
@@ -132,7 +138,48 @@
 			\subsubsection{Zeitliche Kohärenz}\todo[inline]{Lukas}
 		\subsection{Visualisierung}\todo[inline]{Laura}
 	\section{Auswertung}\todo[inline]{Laura \& Timo}
-		\subsection{Testmaterial}\todo[inline]{Laura}
+
+\subsection{Testmaterial}\todo[inline]{Laura}
+Das Verfahren wird an drei unterschiedlichen Bildsequenzen getestet, die im Folgenden Testmaterial 1-3 genannt werden und alle eine Auflösung von 256x2656 Pixeln haben. Bei Testmaterial 1 und Testmaterial 2 wurde ein Bild um bekannte Werte in x- und y-Richtung verschoben. Anzumerken ist auch, dass beide Testmaterialien identisch verschoben wurden. Bei Testmaterial 3 kann die Bewegung der zu sehenden Objekte lediglich geschätzt werden. Alle Testmaterialien wurden für diese Dokumentation aufgenommen bzw. erstellt.\vspace{0.6cm}
+
+\begin{minipage}{0.5\textwidth}
+\begin{figure}[H] 
+\includegraphics[scale=0.77]{Testmaterial1.jpg}
+\caption{Standbild Testmaterial 1}
+\end{figure}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+\textbf{Testmaterial 1}\\
+Diese Bildsequenz besteht aus 150 Frames und wurde aus einem Bild der Stadt Köln erzeugt.\\ 
+Bei den ersten und letzten 50 Frames wird ein Ausschnitt des Bildes um jeweils 10 Pixel nach rechts bzw. unten verschoben. In den mittleren 50 Frames  wird der Bildinhalt um 10 Pixel nach rechts und 10 Pixel nach unten verschoben. 
+\vspace{2.0cm}\\
+\end{minipage}\vspace{0.7cm}
+
+\begin{minipage}{0.5\textwidth}
+\begin{figure}[H] 
+\includegraphics[scale=0.77]{Testmaterial2.jpg}
+\caption{Standbild Testmaterial 2}
+\end{figure}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+\textbf{Testmaterial 2}\\
+Auf den 150 Frames, die diese Bildsequenz umfasst ist ein Blumenmotiv zu sehen, welches jeweils über 50 Frames in verschiedene Richtungen verschoben wird. Auf den ersten Frames erfolgt eine Verschiebung um 10 Pixel nach rechts. Während die mittleren Frames um sowohl 10 Pixel nach rechts, als auch 10 Pixel nach unten verschoben wurden, wurde der Bildinhalt der verbleibenden Frames nur um 10 Pixel nach unten verschoben.
+\vspace{1.0cm}\\
+\end{minipage}\vspace{0.7cm}
+
+
+\begin{minipage}{0.5\textwidth}
+\begin{figure}[H] 
+\includegraphics[scale=0.77]{Testmaterial3.jpg}
+\caption{Standbild Testmaterial 3}
+\end{figure}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+\textbf{Testmaterial 3}\\
+Bei Testmaterial 3 handelt es sich um eine reale Videosequenz, die in Köln Ehrenfeld aufgenommen wurde. Zu sehen sind ein Auto, dass sich von links nach rechts durch das Bild bewegt und eine Fahrradfahrerin, die das Bild genau entgegengesetzt durchfährt. Beide Objekte werden zeitweise durch eine Säule verdeckt. Die Kamera ist starr, weshalb für den restlichen Bildinhalt keine Bewegung zu erkennen ist. 
+\vspace{1.1cm}\\
+\end{minipage}
+
 		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
 		\subsection{Einschwingverhalten}
 			\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
