--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -146,8 +146,35 @@
 	
 	\subsection{Projektziel}
 	Die Zielsetzung für das Projekt "`Bewegungsanalyse einer Videosequenz"' war eine Über\-tra\-gung des Ansatzes von Röntgenbildern auf normale Videosequenzen. Infolge dessen war eine Vernachlässigung der speziellen Anforderung des Bildrauschens möglich, da Röntgenbilder -- insbesondere als Teil einer Fluoroskopie -- zum Schutz des Patienten und des medizinischen Personals nur sehr geringe Röntgendosen enthalten dürfen und deshalb ein extrem schlechtes Signal-zu-Rauschverhältnis aufweisen. Diese Problematik besteht bei normalen Videosequenzen nicht, weshalb für die Untersuchung von vergleichsweise geringem und etwa gleich verteiltem Rauschen ausgegangen werden konnte.
-	\section{Verfahren}
-		\subsection{Bewegungsschätzung}\todo[inline]{Laura}
+	
+\section{Verfahren}\todo[inline]{Laura}
+	In [1] wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort 				aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt, um Arzt und 					Patienten im Rahmen von Behandlungen, welche Röntgenstrahlung verwenden vor gesundheitlichen 			Konsequenzen zu schützen. Es handelt sich bei dem Ansatz um ein Block-Matching Verfahren, 			welche 	dem Satz von Bayes folgen.
+	\\Im vorliegenden Fall soll das Verfahren allerdings auf gewöhnlichen Bildsequenzen angewandt 		werden. Im Folgenden wird das zu grundeliegende Verfahren erläutert und auf eventuelle 				Änderungen im Algorithmus eingegangen. 
+	
+\subsection{Bewegungsschätzung}\todo[inline]{Laura}
+Um zu verstehen, wie die Bewegungsschätzung im einzelnen funktioniert, muss man sich zunächst 
+klar machen, wie das geschätzte Bewegungsvektorfeld überhaupt definiert ist.\\
+
+\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.5]{beziehung-bild-bewegungsfeld.png}
+		\caption{Beziehung zwischen Bewegungsvektorfeld und Einzelbildern [1]}
+		\label{fig:beziehung}
+	\end{figure}
+
+In Abbildung \ref{fig:beziehung} sieht man drei Frames einer Bildsequenz. Y\textsubscript{n} steht hierbei für das n-te Bild dieser Sequenz und y\textsubscript{n}(k) ist der Grauwert des Pixels an der Stelle k. Das k steht für ein Koordinatenpärchen (k\textsubscript{x},k\textsubscript{y}) und es gilt k=1,...,N, wobei N die Anzahl der Pixel eines Frames ist. Der eingezeichnete Vektor v\textsubscript{n}(k) ist derjenige Vektor, der auf k addiert wird, sodass sich die Position des entsprechenden Pixels im vorherigen Bild ergibt. All diese Bewegungsvektoren zusammengenommen ergeben das Bewegungsvektorfeld eines Frames, welches in der Abbildung mit V\textsubscript{n} bezeichnet wird. \\
+Das geschätzte Bewegungsvektorfeld \^{V}\textsubscript{n} ergibt sich nach den Ausführungen von Aach und Kunz zu: 
+	
+\begin{equation}
+	\hat{V}\textsubscript{n}=arg\ \smash{\displaystyle\max_{V}} [p(Y\textsubscript{n},  Y\textsubscript{n-1},\vert V)\ \cdot \  p(\hat{V}\textsubscript{n-1} \vert V)\ \cdot \  p(V)]
+\end{equation}\\
+
+	
+	
+Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrscheinlichkeiten auseinander zu setzen. Diese ergeben sich, 
+	
+	
+
 		\newpage %Muss später entfernt werden
 		\subsection{Programmablauf}\todo[inline]{Lukas (Hab den gesamten Teil auskommentiert)}
 		\begin{comment}
@@ -207,55 +234,59 @@
 			\subsubsection{Örtliche Kohärenz}\todo[inline]{Timo}
 			\subsubsection{Zeitliche Kohärenz}\todo[inline]{Lukas}
 \subsection{Visualisierung}\todo[inline]{Laura}
-Um die Bewegungsvektorfelder darzustellen, wird sich mit Symbolen beholfen. Diese werden blockweise  über die Videosequenz gelegt. Aus Darstellungsgründen wird das Video dazu um Faktor 4 in beide Bildrichtungen hochskaliert. Da die einzelnen Bewegungsvektoren immer zwischen zwei Frames berechnet werden, wird genau ein Bewegungsvektorfeld weniger erzeugt, als das Eingangsmaterial Frames hat. \\
-Bei den bereits erwähnten Symbolen handelt es sich um Kreise und Pfeile. Ein Kreis wird immer dann genutzt, wenn für den entsprechenden Block keine oder nur eine kleine Bewegung durch das Verfahren ermittelt wurde. Die Pfeile zeigen immer in Richtung der ermittelten Verschiebung. Beide Symbole haben ihren Startpunkt im Mittelpunkt des jeweiligen Blocks.
+	Um die Bewegungsvektorfelder darzustellen, wird sich mit Symbolen beholfen. Diese werden 				blockweise  über die Videosequenz gelegt. Aus Darstellungsgründen wird das Video dazu um Faktor 	4 in beide Bildrichtungen hochskaliert. Da die einzelnen Bewegungsvektoren immer zwischen zwei 		Frames berechnet werden, wird genau ein Bewegungsvektorfeld weniger erzeugt, als das 					Eingangsmaterial Frames hat. \\
+	Bei den bereits erwähnten Symbolen handelt es sich um Kreise und Pfeile. Ein Kreis wird immer 		dann genutzt, wenn für den entsprechenden Block keine oder nur eine kleine Bewegung durch das 		Verfahren ermittelt wurde. Die Pfeile zeigen immer in Richtung der ermittelten Verschiebung. 			Beide Symbole haben ihren Startpunkt im Mittelpunkt des jeweiligen Blocks.
 	\section{Auswertung}\todo[inline]{Laura \& Timo}
 
 \subsection{Testmaterial}\todo[inline]{Laura}
-Das Verfahren wird an drei unterschiedlichen Bildsequenzen getestet, die im Folgenden Testmaterial 1-3 genannt werden und alle eine Auflösung von 256x2656 Pixeln haben. Bei Testmaterial 1 und Testmaterial 2 wurde ein Bild um bekannte Werte in x- und y-Richtung verschoben. Anzumerken ist auch, dass beide Testmaterialien identisch verschoben wurden. Bei Testmaterial 3 kann die Bewegung der zu sehenden Objekte lediglich geschätzt werden. Alle Testmaterialien wurden für diese Dokumentation aufgenommen bzw. erstellt.\vspace{0.6cm}
+	Das Verfahren wird anhand von drei unterschiedlichen Bildsequenzen getestet, die im Folgenden 		Testmaterial 1-3 genannt werden und alle eine Auflösung von 256x2656 Pixeln haben. Bei 				Testmaterial 1 und Testmaterial 2 wurde ein Bild um bekannte Werte in x- und y-Richtung 				verschoben. Anzumerken ist auch, dass beide Testmaterialien identisch verschoben wurden. Bei 			Testmaterial 3 kann die Bewegung der zu sehenden Objekte lediglich geschätzt werden. Alle 			Testmaterialien wurden für diese Dokumentation aufgenommen bzw. erstellt.\vspace{0.6cm}
 
 \begin{minipage}{0.5\textwidth}
-\begin{figure}[H] 
-\includegraphics[scale=0.77]{Testmaterial1.jpg}
-\caption{Standbild Testmaterial 1}
-\end{figure}
+	\begin{figure}[H] 
+		\includegraphics[scale=0.77]{Testmaterial1.jpg}
+			\label{fig:testmaterial1}
+			\caption{Standbild Testmaterial 1}
+	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
-\textbf{Testmaterial 1}\\
-Diese Bildsequenz besteht aus 150 Frames und wurde aus einem Bild der Stadt Köln erzeugt.\\ 
-Bei den ersten und letzten 50 Frames wird ein Ausschnitt des Bildes um jeweils 10 Pixel nach links bzw. oben verschoben. In den mittleren 50 Frames  wird der Bildinhalt um 10 Pixel nach links und 10 Pixel nach unten verschoben. 
-\vspace{2.0cm}\\
+	\textbf{Testmaterial 1}\\
+	Diese Bildsequenz besteht aus 150 Frames und wurde aus einem Bild der Stadt Köln erzeugt.\\ 
+	Bei den ersten und letzten 50 Frames wird ein Ausschnitt des Bildes um jeweils 10 Pixel 				nach links bzw. oben verschoben. In den mittleren 50 Frames  wird der Bildinhalt um 10 				Pixel nach links und 10 Pixel nach unten verschoben. 
+	\vspace{2.0cm}\\
 \end{minipage}\vspace{0.7cm}
 
 \begin{minipage}{0.5\textwidth}
-\begin{figure}[H] 
-\includegraphics[scale=0.77]{Testmaterial2.jpg}
-\caption{Standbild Testmaterial 2}
-\end{figure}
+	\begin{figure}[H] 
+		\includegraphics[scale=0.77]{Testmaterial2.jpg}
+			\label{fig:testmaterial2}
+			\caption{Standbild Testmaterial 2}
+	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
-\textbf{Testmaterial 2}\\
-Auf den 150 Frames, die diese Bildsequenz umfasst ist ein Blumenmotiv zu sehen, welches jeweils über 50 Frames in verschiedene Richtungen verschoben wird. Auf den ersten Frames erfolgt eine Verschiebung um 10 Pixel nach links. Während die mittleren Frames um sowohl 10 Pixel nach links, als auch 10 Pixel nach oben verschoben wurden, wurde der Bildinhalt der verbleibenden Frames nur um 10 Pixel nach oben verschoben.
-\vspace{0.9cm}\\
+	\textbf{Testmaterial 2}\\
+	Auf den 150 Frames, die diese Bildsequenz umfasst ist ein Blumenmotiv zu sehen, welches jeweils 	über 50 Frames in verschiedene Richtungen verschoben wird. Auf den ersten Frames erfolgt eine 		Verschiebung um 10 Pixel nach links. Während die mittleren Frames um sowohl 10 Pixel nach 			links, als auch 10 Pixel nach oben verschoben wurden, wurde der Bildinhalt der verbleibenden 			Frames nur um 10 Pixel nach oben verschoben.
+	\vspace{0.9cm}\\
 \end{minipage}\vspace{0.7cm}
 
 
 \begin{minipage}{0.5\textwidth}
-\begin{figure}[H] 
-\includegraphics[scale=0.77]{Testmaterial3.jpg}
-\caption{Standbild Testmaterial 3}
-\end{figure}
+	\begin{figure}[H] 
+		\includegraphics[scale=0.77]{Testmaterial3.jpg}
+			\label{fig:testmaterial3}
+			\caption{Standbild Testmaterial 3}
+	\end{figure}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
-\textbf{Testmaterial 3}\\
-Bei Testmaterial 3 handelt es sich um eine reale Videosequenz, die in Köln Ehrenfeld aufgenommen wurde. Zu sehen sind ein Auto, dass sich von links nach rechts durch das Bild bewegt und eine Fahrradfahrerin, die das Bild genau entgegengesetzt durchfährt. Beide Objekte werden zeitweise durch eine Säule verdeckt. Die Kamera ist starr, weshalb für den restlichen Bildinhalt keine Bewegung zu erkennen ist. Insgesamt besteht die Testsequenz aus 118 Frames.
-\vspace{0.9cm}\\
+	\textbf{Testmaterial 3}\\
+	Bei Testmaterial 3 handelt es sich um eine reale Videosequenz, die in Köln Ehrenfeld 					aufgenommen wurde. Zu sehen sind ein Auto, dass sich von links nach rechts durch das Bild 			bewegt und eine Fahrradfahrerin, die das Bild genau entgegengesetzt durchfährt. Beide Objekte 		werden zeitweise durch eine Säule verdeckt. Die Kamera ist starr, weshalb für den restlichen 			Bildinhalt keine Bewegung zu erkennen ist. Insgesamt besteht die Testsequenz aus 118 Frames.
+	\vspace{0.9cm}\\
 \end{minipage}
 
 		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
 		\subsection{Einschwingverhalten}
 			\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
-			\subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
+\subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
+
 		\subsection{Parameter der Regularisierungsterme}\todo[inline]{Timo}
 	\section{Zusammenfassung}\todo[inline]{Lukas}
 	\section{Arbeitsaufteilung der Dokumentation}
