to do 2.1 erstellt

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -173,7 +173,8 @@ Das geschätzte Bewegungsvektorfeld \^{V}\textsubscript{n} ergibt sich nach den A
 	
 Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrscheinlichkeiten auseinander zu setzen. Diese ergeben sich, 
 	
-	
+	- verbessert sich 
+	- Überleitung Kostenfunktion 
 
 		\newpage %Muss später entfernt werden
 		\subsection{Programmablauf}\todo[inline]{Lukas (Hab den gesamten Teil auskommentiert)}
