Testmaterial neuere Fassung

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -277,8 +277,8 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
 	\textbf{Testmaterial 3}\\
-	Bei Testmaterial 3 handelt es sich um eine reale Videosequenz, die in Köln Ehrenfeld 					aufgenommen wurde. Zu sehen sind ein Auto, dass sich von links nach rechts durch das Bild 			bewegt und eine Fahrradfahrerin, die das Bild genau entgegengesetzt durchfährt. Beide Objekte 		werden zeitweise durch eine Säule verdeckt. Die Kamera ist starr, weshalb für den restlichen 			Bildinhalt keine Bewegung zu erkennen ist. Insgesamt besteht die Testsequenz aus 118 Frames.
-	\vspace{0.9cm}\\
+	Bei Testmaterial 3 handelt es sich um eine reale Videosequenz, die in Köln Ehrenfeld 					aufgenommen wurde. Zu sehen sind ein Auto, dass sich von links nach rechts durch das Bild 			bewegt und eine Fahrradfahrerin, die das Bild genau entgegengesetzt durchfährt. Beide Objekte 		werden zeitweise durch verschiedene Objekte verdeckt. Die Kamera ist starr, weshalb für den 			restlichen Bildinhalt keine Bewegung zu erkennen ist. Insgesamt besteht die Testsequenz aus 118 	Frames.
+	\vspace{0.4cm}\\
 \end{minipage}
 
 		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
