Einleitung Einschwingverhalten Rohfassung

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -282,7 +282,8 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 \end{minipage}
 
 		\subsection{Analyse der Kostenfunktion}\todo[inline]{Laura}
-		\subsection{Einschwingverhalten}
+\subsection{Einschwingverhalten}
+Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus auf den Nullvektor gesetzt. Das Verfahren muss sich also zunächst Einschwingen. Dabei wird im Folgenden zwischen dem interframe und dem intraframe Einschwingen unterschieden.	
 			\subsubsection{Bewegungsvektorfelder}\todo[inline]{Timo}
 \subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
 
